# advent-of-code

./: Cargo.toml
advent-macros/: Cargo.toml  README.md
advent-macros/src/: lib.rs
advent-solutions/: Cargo.toml
advent-solutions/src/: main.rs
advent-solutions/src/year_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  mod.rs
advent-solutions/src/year_2022/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  mod.rs
advent-solutions/src/year_2023/: day_01.rs  day_02.rs  mod.rs
advent-solutions/templates/: day_XX.tpl.rs  year_mod.tpl.rs
src/: main.rs
src/year_2015/: day_02.rs  day_05.rs  day_06.rs  day_08.rs  day_09.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs
