[package]
name = "advent-solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-macros = { path = "../advent-macros" }
md-5 = "0.10.0"
itertools = "0.10.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
rayon = "1.6.1"
